--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "date-fns": "^4.1.0",
     "lenis": "^1.3.16",
     "lucide-react": "^0.562.0",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.26",
     "next": "16.1.0",
     "qss": "^3.0.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "rough-notation": "^0.5.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
